--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "jest": "^30.0.5",
     "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "axios": "^1.11.0"
   }
 }
